--- a/notebooks/examples.ipynb
+++ b/notebooks/examples.ipynb
@@ -279,6 +279,49 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rouge1 0.6364\n",
+      "rouge2 0.2\n",
+      "rougeL 0.3636\n"
+     ]
+    }
+   ],
+   "source": [
+    "from rouge_score.rouge_scorer import RougeScorer\n",
+    "\n",
+    "rouge = RougeScorer(['rouge1', 'rouge2', 'rougeL'])\n",
+    "prediction = 'Today in the zoo we are. Tomorrow cinema.'\n",
+    "target = 'We are going to the zoo today, but tomorrow we will go the cinema.'\n",
+    "scores = rouge.score(target, prediction)\n",
+    "for score, values in scores.items():\n",
+    "    print(score, round(values.fmeasure, 4))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
