Added methods for showing NER model examples in notebook.

--- a/notebooks/models.ipynb
+++ b/notebooks/models.ipynb
@@ -12,7 +12,7 @@
     "from collections import defaultdict\n",
     "from importlib import import_module\n",
     "from pathlib import Path\n",
-    "from typing import Any, Callable, List, Tuple\n",
+    "from typing import Any, Callable, List, Tuple, Dict\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -21,8 +21,10 @@
     "\n",
     "import neural.common.utils as utils\n",
     "from neural.common.data.vocab import Vocab, VocabBuilder\n",
-    "from neural.common.scores import ROUGE\n",
-    "from neural.summarization.dataloader import SummarizationDataset, SummarizationDataLoader"
+    "from neural.common.scores import ROUGE, F1Score\n",
+    "from neural.ner.dataloader import NERDataset, NERDataLoader\n",
+    "from neural.summarization.dataloader import SummarizationDataset, SummarizationDataLoader\n",
+    "from utils.database import DatabaseConnector"
    ]
   },
   {
@@ -121,11 +123,12 @@
     "                    utils.remove_words_from_vocab(vocab, oov_list[i])\n",
     "                heapq.heappush(examples, (score['ROUGE-1'], (score_out, score_target)))\n",
     "\n",
-    "    print_examples(examples, examples_number, best=True)\n",
-    "    print_examples(examples, examples_number, best=False)\n",
+    "    print_summarization_examples(examples, examples_number, best=True)\n",
+    "    print_summarization_examples(examples, examples_number, best=False)\n",
     "\n",
     "\n",
-    "def print_examples(examples: List[Tuple[float, Tuple[str, str]]], examples_number: int, best: bool) -> None:\n",
+    "def print_summarization_examples(examples: List[Tuple[float, Tuple[str, str]]], examples_number: int,\n",
+    "                                 best: bool) -> None:\n",
     "    if best:\n",
     "        examples_type = 'Best'\n",
     "        examples_generator = heapq.nlargest\n",
@@ -135,7 +138,7 @@
     "\n",
     "    print(f'{examples_type} examples:')\n",
     "    for score, (prediction, target) in examples_generator(examples_number, examples):\n",
-    "        print('ROUGE-1: ', score)\n",
+    "        print('ROUGE-1:', score)\n",
     "        print('Prediction:', prediction)\n",
     "        print()\n",
     "        print('Target:', target)\n",
@@ -161,6 +164,83 @@
     "def predict_transformer(model: nn.Module, inputs: Tuple[Any, ...]) -> Tensor:\n",
     "    texts, _, summaries, _, targets = inputs\n",
     "    _, tokens = model(texts)\n",
+    "\n",
+    "    return tokens\n",
+    "\n",
+    "\n",
+    "def show_examples_ner(model: nn.Module, loader: NERDataLoader, vocab: Vocab, tags_dict: Dict[int, Tuple[str, str]],\n",
+    "                      predict_tokens: Callable[[nn.Module, Tuple[Any, ...]], Tensor], examples_number: int = 3) -> None:\n",
+    "    labels = list(tags_dict.keys())\n",
+    "    scorer = F1Score(labels)\n",
+    "    examples = []\n",
+    "    with torch.no_grad():\n",
+    "        for inputs in tqdm(loader):\n",
+    "            inputs = utils.convert_input_to_device(inputs, device)\n",
+    "            text, targets = inputs[:2]\n",
+    "            tokens = predict_tokens(model, inputs)\n",
+    "            for i in range(tokens.shape[1]):\n",
+    "                score_out = tokens[:, i].unsqueeze(dim=1)\n",
+    "                score_target = targets[:, i].unsqueeze(dim=1)\n",
+    "\n",
+    "                score_out = score_out[score_target >= 0]\n",
+    "                score_target = score_target[score_target >= 0]\n",
+    "                if not any(score_target) != 0:\n",
+    "                    continue\n",
+    "\n",
+    "                score = scorer.score(score_out, score_target)\n",
+    "\n",
+    "                texts = text[:, i]\n",
+    "                texts = texts[texts > 0]\n",
+    "\n",
+    "                score_out = ' '.join(tags_dict[tag.item()][0] if tag.item() in tags_dict else 'O' for tag in score_out)\n",
+    "                score_target = ' '.join(tags_dict[tag.item()][0] if tag.item() in tags_dict else 'O' for tag\n",
+    "                                        in score_target)\n",
+    "                texts = utils.tensor_to_string(vocab, texts)\n",
+    "\n",
+    "                heapq.heappush(examples, (score['F1'], (texts, score_out, score_target)))\n",
+    "\n",
+    "    print_ner_examples(examples, examples_number, best=True)\n",
+    "    print_ner_examples(examples, examples_number, best=False)\n",
+    "\n",
+    "\n",
+    "def print_ner_examples(examples: List[Tuple[float, Tuple[str, str]]], examples_number: int,\n",
+    "                       best: bool) -> None:\n",
+    "    if best:\n",
+    "        examples_type = 'Best'\n",
+    "        examples_generator = heapq.nlargest\n",
+    "    else:\n",
+    "        examples_type = 'Worst'\n",
+    "        examples_generator = heapq.nsmallest\n",
+    "\n",
+    "    print(f'{examples_type} examples:')\n",
+    "    for score, (text, prediction, target) in examples_generator(examples_number, examples):\n",
+    "        print('F1:', score)\n",
+    "        print('Text:', text)\n",
+    "        print('Prediction:', prediction)\n",
+    "        print('Target:', target)\n",
+    "        print(50 * '-')\n",
+    "\n",
+    "\n",
+    "def predict_bilstm_cnn(model: nn.Module, inputs: Tuple[Any, ...]) -> Tensor:\n",
+    "    words, tags, chars, word_features, char_features = inputs\n",
+    "    output = model(words, chars, word_features, char_features)\n",
+    "    tokens = torch.argmax(output, dim=-1)\n",
+    "\n",
+    "    return tokens\n",
+    "\n",
+    "\n",
+    "def predict_bilstm_crf(model: nn.Module, inputs: Tuple[Any, ...]) -> Tensor:\n",
+    "    words, tags, chars, _, _ = inputs\n",
+    "    mask = (tags >= 0).float()\n",
+    "    loss, predictions = model(words, chars, tags, mask)\n",
+    "\n",
+    "    return predictions\n",
+    "\n",
+    "\n",
+    "def predict_id_cnn(model: nn.Module, inputs: Tuple[Any, ...]) -> Tensor:\n",
+    "    words, tags, _, word_features, _ = inputs\n",
+    "    outputs = model(words, word_features)\n",
+    "    tokens = torch.argmax(outputs[-1], dim=-1)\n",
     "\n",
     "    return tokens\n"
    ],
@@ -223,6 +303,69 @@
     "dataset = SummarizationDataset('cnn_dailymail', 'test', 400, 100, vocab)\n",
     "dataloader = SummarizationDataLoader(dataset, batch_size=16)\n",
     "show_examples_summarization(transformer, dataloader, vocab, predict_transformer, use_oov=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tags_count = DatabaseConnector().get_tag_count('conll2003') + 1\n",
+    "tags_dict = DatabaseConnector().get_tags_dict('conll2003')\n",
+    "vocab = VocabBuilder.build_vocab('conll2003', 'ner', vocab_type='char', digits_to_zero=True)\n",
+    "bilstm_cnn = load_trained_model('bilstm_cnn', models_path / 'bilstm_cnn', tags_count=tags_count, vocab=vocab)\n",
+    "count_model_parameters(bilstm_cnn)\n",
+    "dataset = NERDataset('conll2003', 'test', vocab)\n",
+    "dataloader = NERDataLoader(dataset, batch_size=128, two_sided_char_padding=True, conv_kernel_size=3)\n",
+    "show_examples_ner(bilstm_cnn, dataloader, vocab, tags_dict, predict_bilstm_cnn)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tags_count = DatabaseConnector().get_tag_count('conll2003') + 1\n",
+    "tags_dict = DatabaseConnector().get_tags_dict('conll2003')\n",
+    "vocab = VocabBuilder.build_vocab('conll2003', 'ner', vocab_type='char', digits_to_zero=True)\n",
+    "bilstm_crf = load_trained_model('bilstm_crf', models_path / 'bilstm_crf', tags_count=tags_count, vocab=vocab)\n",
+    "count_model_parameters(bilstm_crf)\n",
+    "dataset = NERDataset('conll2003', 'test', vocab)\n",
+    "dataloader = NERDataLoader(dataset, batch_size=128)\n",
+    "show_examples_ner(bilstm_crf, dataloader, vocab, tags_dict, predict_bilstm_crf)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tags_count = DatabaseConnector().get_tag_count('conll2003') + 1\n",
+    "tags_dict = DatabaseConnector().get_tags_dict('conll2003')\n",
+    "vocab = VocabBuilder.build_vocab('conll2003', 'ner', vocab_type='char', digits_to_zero=True)\n",
+    "id_cnn = load_trained_model('id_cnn', models_path / 'id_cnn', tags_count=tags_count, vocab=vocab)\n",
+    "count_model_parameters(id_cnn)\n",
+    "dataset = NERDataset('conll2003', 'test', vocab)\n",
+    "dataloader = NERDataLoader(dataset, batch_size=128)\n",
+    "show_examples_ner(id_cnn, dataloader, vocab, tags_dict, predict_id_cnn)"
    ],
    "metadata": {
     "collapsed": false,
